// Vitest Snapshot v1

exports[`TimePicker > TimePicker baseVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-time-picker />
  <t-time-picker />
</t-space>
`;

exports[`TimePicker > TimePicker clearableVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <h3>
    具备清空按钮
  </h3>
  <t-time-picker />
  <h3>
    禁止清空按钮
  </h3>
  <t-time-picker />
</t-space>
`;

exports[`TimePicker > TimePicker disabledVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <h3>
    禁用整个选择器
  </h3>
  <t-time-picker
    disabled="true"
  />
  <h3>
    禁用指定时间
  </h3>
  <t-time-picker
    disable-time="function () { [native code] }"
  />
</t-space>
`;

exports[`TimePicker > TimePicker formatVue demo works fine 1`] = `
<t-time-picker
  format="h:m:s a"
/>
`;

exports[`TimePicker > TimePicker hideClearButtonVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <h3>
    具备清空按钮
  </h3>
  <t-time-picker
    clearable=""
  />
  <h3>
    禁止清空按钮
  </h3>
  <t-time-picker />
</t-space>
`;

exports[`TimePicker > TimePicker hmVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <h3>
    时分选择
  </h3>
  <t-time-picker
    format="HH:mm"
  />
  <h3>
    毫秒选择
  </h3>
  <t-time-picker
    default-value="12:59:59:000"
    format="HH:mm:ss:SSS"
  />
</t-space>
`;

exports[`TimePicker > TimePicker hmsVue demo works fine 1`] = `<t-time-picker />`;

exports[`TimePicker > TimePicker keyboardVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <h3>
    允许输入
  </h3>
  <t-time-picker
    allowinput=""
  />
  <h3>
    禁止输入
  </h3>
  <t-time-picker />
</t-space>
`;

exports[`TimePicker > TimePicker rangeVue demo works fine 1`] = `
<t-space>
  <t-time-range-picker
    allow-input=""
    class="demos"
    clearable=""
    format="HH:mm:ss"
  />
</t-space>
`;

exports[`TimePicker > TimePicker showStepsVue demo works fine 1`] = `
<t-time-picker
  steps="1,2,3"
/>
`;

exports[`TimePicker > TimePicker stepVue demo works fine 1`] = `
<t-time-picker
  steps="1,2,3"
/>
`;

exports[`TimePicker > TimePicker twelveHourMeridianVue demo works fine 1`] = `
<t-time-picker
  format="A hh:mm:ss"
  placeholder="选择时间"
/>
`;

exports[`TimePicker > TimePicker twelveHourVue demo works fine 1`] = `
<t-time-picker
  format="hh:mm:ss a"
/>
`;
